# IPP2016-Wielomiany

./: CMakeLists.txt  Doxyfile.in  chain_poly.sh
src/: calc_main.c  calc_main.c.c  calculator_stack.c  calculator_stack.h  cmocka_tests.c  lexer.c  lexer.h  main.c  mock_tricks.h  parser.c  parser.h  poly.c  poly.h  test_poly.c  test_poly_core.c  test_poly_core.h  unit_tests_poly.c
src/old_tests/: const_arr.h  test_poly.c  test_poly_core.c
src/unit_tests/: calc_compose.c  calc_compose.h  mock_tricks.h  poly_compose.c  poly_compose.h  tests_main.c  tests_utils.c  tests_utils.h
